--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,7 @@ main:
     url: /year-archive/
     
   - title: "中文主页"
-    url: /cv/
+    url: /Chinese/
     
   #- title: "Guide"
   #  url: /markdown/
