--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Associate Professor"
   location         : "Hebei, China"
-  employer         : "Hebei Normal University"
+  employer         : "[Hebei Normal University](https://www.hebtu.edu.cn/)"
   uri              : # URL
   email            : # "ybzhang@hebtu.edu.cn" 
 
