--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Associate Professor"
   location         : "Hebei, China"
-  employer         : "Hebei Normal University<a href="{{https://www.hebtu.edu.cn/}}">Hebei Normal University</a>"
+  employer         : "Hebei Normal University"
   uri              : # URL
   email            : # "ybzhang@hebtu.edu.cn" 
 
