--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,8 +18,8 @@ main:
   - title: "中文主页"
     url: /Chinese/
 
-  - title: "Miscellaneous"
-    url: /miscellaneous/ 
+  #- title: "Miscellaneous"
+  #  url: /miscellaneous/ 
     
   #- title: "Guide"
   #  url: /markdown/
